tests/comp/sem/valid/shadow-1.mj
class A {

	public int foo;

	public void test() {
		boolean foo;
		if(foo) {
		}
		while(foo) {
		}
	}

	public static void main(String[] args) {
	}

}
