tests/comp/sem/invalid/clash_methods.mj
class A {

	public int foo() { return 0; }

	/*** public boolean foo() { return false; } ***/

	public static void main(String[] args) {
	}

}
